--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reusable Components</title>
+    <title>HW-2 | Bikepacking Routes, Gear, Inspiration - Bikepacking.com</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container">
+<!-- BPC bar START -->
+    <div class="bpc"><p> <strong>join</strong> the bikepacking collective to support us + get the bikepacking journal & other benefits </p></div>
+    </div>
+    </div>
+    <!-- BPC END -->
+    <!-- NAV START -->
+    <nav>
+        <div class="navi">
+          <a href="#">EXPLORE</a>
+          <a href="#">ROUTES</a>
+          <a href="#">JOURNAL</a>
+          <a href="#">DISPATCH</a>
+          <a href="#">EVENTS</a>
+          <a href="#">BIKEPACKING 101</a>
+        </div>
+        <!-- DON'T FORGET TO PUT THE ICONS INTO NAVI AND BPC!! -->
+
+      </nav>
+      <!-- NAVI ENDS -->
+      <!-- HERO-AREA START -->
+      <section class="hero-area">
+
+        <div class="logo-area">
+        </div>
+      </div>
+
+      </section>
+
+    <!-- MAIN START  -->
+
+   <div class="container">
+    <div class="dispatchContainer">
       <div class="dispatch-event">
-        <div class="date-time">Sep 15</div>
+        <div class="date-time">13 hours ago</div>
         <div class="dispatch-image">
           <img
             src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
@@ -19,107 +50,127 @@
         </div>
         <div class="title-bubble">
           <div class="title">
-            <h5>Rigs of 2021</h5>
-            <h5>Hungarian Games</h5>
+            <h5>Rig Rundown: </h5>
+            <h5>'21 Hungarian Games</h5>
           </div>
           <div class="bubble">
             10
             <div class="triangle"></div>
           </div>
         </div>
-        <div class="dispatch-event">
-          <div class="date-time">Sep 15</div>
-          <div class="dispatch-image">
-            <img
-              src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
-              alt="bike rider"
-            />
-          </div>
-          <div class="title-bubble">
-            <div class="title">
-              <h5>Rigs of 2021</h5>
-              <h5>Hungarian Games</h5>
-            </div>
-            <div class="bubble">
-              10
-              <div class="triangle"></div>
-            </div>
-          </div>
-          <div class="dispatch-event">
-            <div class="date-time">Sep 15</div>
-            <div class="dispatch-image">
-              <img
-                src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
-                alt="bike rider"
-              />
-            </div>
-            <div class="title-bubble">
-              <div class="title">
-                <h5>Rigs of 2021</h5>
-                <h5>Hungarian Games</h5>
-              </div>
-              <div class="bubble">
-                10
-                <div class="triangle"></div>
-              </div>
-            </div>
-            <div class="dispatch-event">
-              <div class="date-time">Sep 15</div>
-              <div class="dispatch-image">
-                <img
-                  src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
-                  alt="bike rider"
-                />
-              </div>
-              <div class="title-bubble">
-                <div class="title">
-                  <h5>Rigs of 2021</h5>
-                  <h5>Hungarian Games</h5>
-                </div>
-                <div class="bubble">
-                  10
-                  <div class="triangle"></div>
-                </div>
-              </div>
-              <div class="dispatch-event">
-                <div class="date-time">Sep 15</div>
-                <div class="dispatch-image">
-                  <img
-                    src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
-                    alt="bike rider"
-                  />
-                </div>
-                <div class="title-bubble">
-                  <div class="title">
-                    <h5>Rigs of 2021</h5>
-                    <h5>Hungarian Games</h5>
-                  </div>
-                  <div class="bubble">
-                    10
-                    <div class="triangle"></div>
-                  </div></div>
-              </div>
-              <div class="dispatch-event">
-                <div class="date-time">Sep 15</div>
-                <div class="dispatch-image">
-                  <img
-                    src="images/Badlands21_Carlos_Mazon_DSC05497.jpeg"
-                    alt="bike rider"
-                  />
-                </div>
-                <div class="title-bubble">
-                  <div class="title">
-                    <h5>Rigs of 2021</h5>
-                    <h5>Hungarian Games</h5>
-                  </div>
-                  <div class="bubble">
-                    10
-                    <div class="triangle"></div>
 
-                </div>
-            
-        </div>      
     </div>
+
+    <div class="dispatch-event">
+      <div class="date-time">mar 02</div>
+      <div class="dispatch-image">
+        <img
+          src="images/beyond-familiar-bikepacking-moab_10-2000x1333.jpeg"
+          alt="bike rider"
+        />
+      </div>
+      <div class="title-bubble">
+        <div class="title">
+          <h5>Beyond Familiar</h5>
+          <h5>Biking Moab</h5>
+        </div>
+        <div class="bubble">
+          21
+          <div class="triangle"></div>
+        </div>
+      </div>
+
+  </div>
+
+  <div class="dispatch-event">
+    <div class="date-time">feb 27</div>
+    <div class="dispatch-image">
+      <img
+        src="images/old-man-mountain-divide-rack_1-2000x1333.jpeg"
+        alt="bike rider"
+      />
+    </div>
+    <div class="title-bubble">
+      <div class="title">
+        <h5>Adventurers Never</h5>
+        <h5>Stop Exploring</h5>
+      </div>
+      <div class="bubble">
+        30
+        <div class="triangle"></div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="dispatch-event">
+  <div class="date-time">FEB 22</div>
+  <div class="dispatch-image">
+    <img
+      src="images/rockgeist-barjam-update-main-2000x1333.jpeg"
+      alt="bike rider"
+    />
+  </div>
+  <div class="title-bubble">
+    <div class="title">
+      <h5>All New:</h5>
+      <h5>Barjam Accessories</h5>
+    </div>
+    <div class="bubble">
+      13
+      <div class="triangle"></div>
+    </div>
+  </div>
+
+  </div>
+
+<div class="dispatch-event">
+  <div class="date-time">Feb 16</div>
+  <div class="dispatch-image">
+    <img
+      src="images/Tumbleweed-Stargazer-Review-Video_00-2000x1333.jpeg"
+      alt="bike rider"
+    />
+  </div>
+  <div class="title-bubble">
+    <div class="title">
+      <h5>Stargazer By</h5>
+      <h5>Tumbleweed [Review]</h5>
+    </div>
+    <div class="bubble">
+      94
+      <div class="triangle"></div>
+    </div>
+  </div>
+
+  </div>
+
+<div class="dispatch-event">
+  <div class="date-time">feb 11</div>
+  <div class="dispatch-image">
+    <img
+      src="images/Whisky-Spano-Drop-Handlebar_7-2000x1334.jpeg"
+      alt="bike rider"
+    />
+  </div>
+  <div class="title-bubble">
+    <div class="title">
+      <h5>Whisky Spano Drop</h5>
+      <h5>Handlebar: First look</h5>
+    </div>
+    <div class="bubble">
+      93
+      <div class="triangle"></div>
+    </div>
+  </div>
 </div>
-  </body>
+</div>
+<section class="below-dispatch">
+  <img src="/images/bikePackingImages/ORTLIEB_Banner_Bikepacking_wide_March-2021.jpeg" alt="banner">
+
+  <p>BIKEPACKING.com is the resource for the latest bikepacking routes, gear reviews, inspiration, planning <br> insight, adventure stories, news, and events. Brought to you by folks addicted to campfire smoke, <br> chromoly steel & getting lost.</p>
+</section>
+
+<footer></footer>
+</body>
 </html>
